--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/gestao_contas?autoReconnect=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 
 # exibe os comandos SQL
 spring.jpa.properties.hibernate.show_sql=true
